tests/compile_fail/invalid_command_function.zig
const vk = @import("vulkan");

comptime {
    _ = vk.CommandFunction(fn () void);
}
